# unity6scenevertex

./: README.md
SceneVertex/: .gitignore
SceneVertex/Assets/GeneratedMaterials/: SceneVertexShared.mat
SceneVertex/Assets/GeneratedMeshes/: BushA.asset  BushB.asset  BushC.asset  Fence.asset  Flower.asset  FlowerA.asset  FlowerB.asset  FlowerC.asset  MushroomA.asset  MushroomB.asset  MushroomC.asset  Rock.asset  RockA.asset  RockB.asset  RockC.asset  Tree.asset  TreeA.asset  TreeB.asset  TreeC.asset
SceneVertex/Assets/PlacementEvaluation/: CURATION_GUIDE.md  JSON_EDIT_RULES.md  placement_elements.json  placement_layout_curated.json
SceneVertex/Assets/Scenes/: SampleScene.unity
SceneVertex/Assets/Scenes/SampleScene/: LightingData.asset
SceneVertex/Assets/Scripts/: SceneVertexFramePerformanceOverlay.cs
SceneVertex/Assets/Scripts/Editor/: PlacementBitmapRenderer.cs  PlacementEvaluationData.cs  PlacementEvaluationValidation.cs  PlacementEvaluationWindow.cs  ProceduralNatureLayoutWindow.cs  (+3 more)
SceneVertex/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
SceneVertex/Assets/Shaders/: SceneVertexVertexColor.shader
SceneVertex/ProjectSettings/: ProjectSettings.asset
js_curate/Docs/: STATIC_WEB_TRAIL_PROTOTYPE_PLAN.md
js_curate/web/: app.js  generator.js  heightmap.js  index.html  palette.js  params.js  renderer.js  styles.css
rustterrain/: .gitignore  Cargo.toml
rustterrain/src/: constants.rs  main.rs  terrain.rs  tool.rs  utils.rs
rustterrain/src/app/: canvas.rs  history.rs  mod.rs  painting.rs  persistence.rs  rendering.rs  stroke.rs  ui.rs
(+5 files in other folders)
